--- a/gb/13/8/2/n3932130.md
+++ b/gb/13/8/2/n3932130.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>足球季话达拉斯牛仔队</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/rice-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元2013年08月02日讯】<B>达拉斯牛仔队的早期英雄</B></p>
-<p>　　前些日子，美国新泽西州州长克里斯提（Chris Christie）为促选而下访民间，到了新泽西州一间小学，进入一个小六教室，让小学生们自由发问。其中一位小学生问的一个问题，克里斯提州长的回答引起教室里小朋友的一片嘘声。这问题是“你喜爱的<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>队是那一队”？</p>
+<p>　　前些日子，美国新泽西州州长克里斯提（Chris Christie）为促选而下访民间，到了新泽西州一间小学，进入一个小六教室，让小学生们自由发问。其中一位小学生问的一个问题，克里斯提州长的回答引起教室里小朋友的一片嘘声。这问题是“你喜爱的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>队是那一队”？</p>
 <p>　　既然是住在仅隔着哈德森河与“大苹果”纽约市为邻的新泽西州，其“标准答案”应该是以下两者之一；“纽约喷射机队”或是“纽约巨人队”。岂料克里斯提州长的回答居然是“达拉斯牛仔队”！这不能“顺应民情”的回答，当然引起小学生们的不快，可他说的是实话，因为他知道搞政治的人一旦说谎被拆穿，下场会十分凄惨。</p>
 <p>　　事后克里斯提州长向记者解释，在他成长的上世纪七十年代初期，达拉斯牛仔队的四分卫（Quarter Back）罗杰?史道巴克（Roger Staubach）与牛仔队总教练汤姆?蓝德瑞（Tom Landry），都是他最崇拜的足球英雄。他从此成为牛仔队的的终身球迷！</p>
-<p>　　<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>在每年的劳工节前后开赛，这是美国的“国球”，也是我来美国的第一年就迷上了的。在每年的足球季，达拉斯本地电视台必定实况转播牛仔队的每一场球赛，1974年是我应聘搬到达拉斯的第一年，那时就深刻体验到一般达拉斯居民对牛仔队之疯狂，我自己也几乎立即成为牛仔队的极度忠贞球迷！</p>
+<p>　　<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>在每年的劳工节前后开赛，这是美国的“国球”，也是我来美国的第一年就迷上了的。在每年的足球季，达拉斯本地电视台必定实况转播牛仔队的每一场球赛，1974年是我应聘搬到达拉斯的第一年，那时就深刻体验到一般达拉斯居民对牛仔队之疯狂，我自己也几乎立即成为牛仔队的极度忠贞球迷！</p>
 <p>　　谈到达拉斯牛仔队，就不得不先提到那曾担任牛仔队总教练二十九年之久的汤姆?蓝德瑞。他是美式足球历史上最传奇的人物之一，且不提他在二次大战欧洲战场上担任B-17马丁轰炸机飞行员的英勇事迹，与他身为纽约巨人队球员时的叱咤风云，你可知道他曾“发明”过不少美式足球的攻守战术。这些战术，直到今天还被NFL各队广泛地采用！</p>
 <p>　　在美式足球一般“防守”战术上，基本上有4-3队形与3-4队形两种，3-4队形是最原始的防守队形，自有美式足球赛以来，就是用此队形。对不太了解美式足球的观众，可以简单的说3-4队形就是防守的第一线放三个球员，第二线放四个球员。相较于4-3队形，这3-4队形是比较保守的队型，给对方的主将四分卫或是跑锋﹝Running Back﹞有稍多一点活动空间，但是第二线的四个球员会让对方的“接球员”﹝Wide Receiver﹞受比较大的干扰。这是因为跑锋平均每段攻势跑不到五码，而接球员只要接到球，平均是八码以上。更简单地说，3-4防守队形就像是“放小鱼，逮大鱼”，希望对方在三次进攻中，要不就是达不到可以续攻的十码，或是增加在防守的第二线阻截﹝Intercept﹞到四分卫传球的机会。</p>
 <p>　　牛仔队总教练蓝德瑞把3-4队形改为4-3，前方的四个球员会给对方的四分卫与跑锋的稍多压力，也降低了跑锋的平均攻码。但如果对方用传球进攻（Passing）的方式，第二线只有三个球员，不是漏洞大了一些吗？弥补的方法是第二线的中间球员，也就是“中央线卫”（Middle Line Back）要特别精明灵活，随时或左或右的补位。这“中央线卫”的位置，也负责防守队之发号司令，十足地是“防守队的四分卫”，这特殊球员位置就是蓝德瑞“发明”的。一般球队若是没有一位身手矫健的“中央线卫”，是不敢用4-3队形的。简单地说，4-3防守队形就是想要“大鱼小鱼通吃”。当然，无论是用那一种防守队形，先决条件是要有称职的球员才行。</p>
@@ -51,36 +51,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/6/29/n3905077.md#1">美前橄榄球星被控谋杀罪 或面临终身监禁</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/7/2/n3906720.md#1">黑鹰队四年两夺冠  芝加哥大游行庆典</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/7/18/n3920040.md#1">詹姆斯获颁ESPY年度最佳男运动员</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991066.md#1">国际奥委会：东京奥运会明年7月23日揭幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/6/29/n3905077.md#1">美前橄榄球星被控谋杀罪 或面临终身监禁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/7/2/n3906720.md#1">黑鹰队四年两夺冠  芝加哥大游行庆典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/7/18/n3920040.md#1">詹姆斯获颁ESPY年度最佳男运动员</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678994.md#1">WTT球星挑战赛 林昀儒男双、混双晋级8强</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/15/n11590692.md#1" target="_blank">林辉：一个曾给毛献花女孩对父亲的忏悔</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992282.md#1">瘟疫下 湖北医生揭不能泄露的“国家机密”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995429.md#1">杠上美国务卿 华春莹再次说错话被嘲</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/24/n11968696.md#1">台医生投宿被要求取消订房 结局让医师感动不已</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/26/n11978138.md#1">宿命通功能超越时空 解读过去和未来</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989412.md#1">生死有命 功名利禄早有定数</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/22/n11962699.md#1">五十岁四十九年非  他是何方圣贤？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/2/13/n11866538.md#1">【三国英雄13】胜败无常（文字版）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/8/2/n3932130.htm">足球季话达拉斯牛仔队</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/8/2/n3932130.htm">足球季话达拉斯牛仔队</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/13/8/2/n3932130.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/13/8/2/n3932130.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
